2009-10-11  Michael Sperber  <mike@xemacs.org>

	* event-stream.c (post_command_hook): Run `post-command-hook'
	without INHIBIT_EXISTING_PERMANENT_DISPLAY_OBJECT_DELETION -
	deleting other windows off that hook is legitimate.

2009-10-08  Jerry James  <james@xemacs.org>

	* bytecode.c (bytecode_arithop): Make divide-by-zero errors
	noncontinuable.
	* floatfns.c (arith_error2): New macro for signaling divide-by-zero.
	(ceiling_two_fixnum): Handle a value returned from a continuable error.
	(ceiling_two_bignum): Ditto.
	(ceiling_two_ratio): Ditto.
	(ceiling_two_bigfloat): Ditto.
	(ceiling_two_float): Ditto.
	(floor_two_fixnum): Ditto.
	(floor_two_bignum): Ditto.
	(floor_two_ratio): Ditto.
	(floor_two_bigfloat): Ditto.
	(floor_two_float): Ditto.
	(round_two_fixnum): Ditto.
	(round_two_bignum): Ditto.
	(round_two_ratio): Ditto.
	(round_two_bigfloat): Ditto.
	(round_two_float): Ditto.
	(truncate_two_fixnum): Ditto.
	(truncate_two_bignum): Ditto.
	(truncate_two_ratio): Ditto.
	(truncate_two_bigfloat): Ditto.
	(truncate_two_float): Ditto.
	(truncate_one_ratio): Truncating zero should result in zero.

2009-10-10  Aidan Kehoe  <kehoea@parhasard.net>

	* rangetab.c (Frange_table_type): 
	Correct the docstring for this function, don't reuse that of
	Frange_table_p.

2009-10-05  Jerry James  <james@xemacs.org>

	* emacs.c (main_1): Check the return value of dup() to quiet gcc.
	* input-method-xlib.c (describe_Window): Check the return value of
	system() to quiet gcc.
	* objects-tty.c (UNUSED_IF_NEW_GC): New macro.
	(tty_finalize_color_instance): Use it to quiet gcc.
	(tty_finalize_font_instance): Ditto.
	* syntax.c (UNUSED_IF_NEW_GC): New macro.
	(uninit_buffer_syntax_cache): Use it to quiet gcc.

2009-10-05  Jerry James  <james@xemacs.org>

	* glade.c: Add GPL v2 or later notice with explicit permission of
	Bill Perry (private email).
	* gtk-glue.c: Ditto.
	* gtk-xemacs.c: Ditto.
	* gtk-xemacs.h: Ditto.
	* ui-byhand.c: Ditto.
	* ui-gtk.c: Ditto.
	* ui-gtk.h: Ditto.